kubernetes/apps/registry/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry-route
  namespace: registry
spec:
  parentRefs:
    - name: cluster-edge-gateway
      namespace: traefik
  hostnames:
    - registry.kwer.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: registry
          port: 5000
